Ninja: Update API spec
